add portfolio links and update client list

--- a/kc-web-design/src/content/portfolio-posts/agilus-work-solutions.mdx
+++ b/kc-web-design/src/content/portfolio-posts/agilus-work-solutions.mdx
@@ -12,6 +12,8 @@ linkLabel: View Project Details
 **Organization:** Agilus Work Solutions  
 **Challenge:** Website re-design and rapid migration from expensive HubSpot platform to an easy-to-manage custom WordPress solution. Transform the brand to a more sophisticated corporate look to expand target market appeal.
 
+**Link:** <a href="https://www.agilus.ca/job-seekers/" target="_blank">Agilus Work Solutions</a>
+
 ---
 
 ## Impact & Results
