--- a/kc-web-design/src/content/portfolio-posts/algonquin-college-design-system.mdx
+++ b/kc-web-design/src/content/portfolio-posts/algonquin-college-design-system.mdx
@@ -12,6 +12,8 @@ linkLabel: View Project Details
 **Team Size:** 6 members  
 **Challenge:** Organization did not have web-specific design systems in place despite strong brand guidelines.
 
+**Link:** <a href="/Ken-Chase-Portfolio-2025-08-11.pdf" target="_blank">PDF Portfolio - Selected UI/UX Work</a>
+
 ---
 
 ## Impact & Results
