--- a/kc-web-design/src/content/portfolio-posts/ccpsa.mdx
+++ b/kc-web-design/src/content/portfolio-posts/ccpsa.mdx
@@ -12,6 +12,8 @@ linkLabel: View Project Details
 **Organizations:** Canadian Cerebral Palsy Sports Association (CCPSA) & Boccia Canada  
 **Challenge:** Replace outdated, inaccessible websites with modern, bilingual platforms that better serve athletes, staff, and the broader sporting community
 
+**Link:** <a href="https://bocciacanada.ca/en/" target="_blank">Boccia Canada</a>
+
 ---
 
 ## Impact & Results
