--- a/kc-web-design/src/content/portfolio-posts/health.canada.mdx
+++ b/kc-web-design/src/content/portfolio-posts/health.canada.mdx
@@ -12,6 +12,8 @@ linkLabel: View Project Details
 **Organization:** Health Canada - Pest Management Regulatory Agency (PMRA)  
 **Challenge:** Transform legacy forms into user-friendly digital experiences that reduce support burden while maintaining strict compliance standards.
 
+**Link:** <a href="/Ken-Chase-Portfolio-2025-08-11.pdf" target="_blank">PDF Portfolio - Selected UI/UX Work</a>
+
 ---
 
 ## Impact & Results
