--- a/kc-web-design/src/content/portfolio-posts/nrcan.mdx
+++ b/kc-web-design/src/content/portfolio-posts/nrcan.mdx
@@ -1,6 +1,6 @@
 ---
 title: Natural Resources Canada
-description: Served as design lead for geospatial platform rebranding and co-ordinated the development of a web presence for a multi-departmental flood mapping strategy."
+description: Served as design lead for geospatial platform rebranding and co-ordinated the development of a web presence for a multi-departmental flood mapping strategy.
 date: '2021-2022'
 linkLabel: View Project Details
 ---
@@ -11,6 +11,8 @@ linkLabel: View Project Details
 **Duration:** December 2020 - August 2022  
 **Organization:** Natural Resources Canada - Federal Geospatial Platform, Strategic Policy and Innovation Sector  
 **Challenge:** Launch delayed national geospatial platform and design flood mapping strategy for emergency management across multiple government levels
+
+**Links:** <a href="https://geo.ca/home/" target="_blank">Geo.ca</a> | <a href="/Ken-Chase-Portfolio-2025-08-11.pdf" target="_blank">PDF Portfolio - Selected UI/UX Work</a>
 
 ---
 
